--- a/package.json
+++ b/package.json
@@ -7,5 +7,14 @@
     "start": "nodemon server.js"
   },
   "author": "Hanh Nguyen",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.0",
+    "dotenv": "^16.0.1",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
+    "mongoose": "^6.5.2",
+    "nodemon": "^2.0.19"
+  }
 }
